Bug 152006 - The "Apply" button on the "Text Grid" dialog does nothing on second-click
Summary: The "Apply" button on the "Text Grid" dialog does nothing on second-click
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: All Linux (All)
: medium normal
Assignee: Jonathan Clark
URL:
Whiteboard: target:25.8.0
Keywords:
Depends on:
Blocks: Text-Grid
  Show dependency treegraph
 
Reported: 2022-11-11 15:26 UTC by Kevin Suo
Modified: 2025-05-23 13:43 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2022-11-11 15:26:30 UTC
Steps to Reproduce:

1. New Writer, Foramt > Page Style > Text Grid. Select the grid type "Grid (lines and characters)", then click "Apply" (I say Apply button, not the OK button).

--> Text grids are properly set, that's good. Do not close this dialog.

2. Uncheck the "Display Grid" checkbox, then click "Apply" button.
--> Grid is not visible, good. 
Now check the "Display Grid" checkbox and click "Apply“ again.
--> Grid is visible, good.

3. Now, click "OK" button to close the dialog, open this dialog again, uncheck the "Display Grid" checkbox, click Apply.
--> Grid is not visible, good.
Now if you check the "Display Gird" checkbox and then click Apply again.
--< The grid is still not visible (i.e. nothing is applied at the 2nd Apply).

Current Result:
In step 3, the first time you make a change and click Apply, it applies, but the second time you do it it does nothing.

Expected Result:
When I click the Apply the 2nd time, the changes should properly be applied.

It seems that all the controls on this dialog have this kind of problem.

Reproducible on 7.3.7, 7.4.3 and master.

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 96442f149ca46ad3c4b96ef81beac39fef642785
CPU threads: 8; OS: Linux 6.0; UI render: default; VCL: gtk3
Locale: zh-CN (zh_CN.UTF-8); UI: en-US
Calc: threaded
Comment 1 raal 2022-11-11 22:35:19 UTC
Confirm with Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: cfc8a8f5d841b3f84d207196153be67da7f60652
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 2 raal 2022-11-11 22:47:22 UTC
Repro Version: 4.2.0.0.alpha1+
Build ID: fc8f44e82de4ebdd50ac5fbb9207cd1a59a927e3

In 4.1 Text grid doesn't exist.
Comment 3 QA Administrators 2024-11-11 03:13:14 UTC Comment hidden (obsolete)
Comment 4 Commit Notification 2025-05-23 13:38:32 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/21c5006f2e973c1d62085de29c3f4240dce1a4ff

tdf#152006 sw: Fix nonresponsive apply button in Text Grid settings

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.