tdf#152006 sw: Fix nonresponsive apply button in Text Grid settings

Previously, there was a situational bug causing the Page Style->Text
Grid settings to fail to update after clicking the Apply button. This
change fixes that bug.

Change-Id: I260ecc9c72d1e9a575597c57e3145dd1952cba0c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185676
Tested-by: Jenkins
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>